tests/baselines/reference/generics4.errors.txt
tests/cases/compiler/generics4.ts(7,1): error TS2322: Type 'C<Y>' is not assignable to type 'C<X>'.
  Type 'Y' is not assignable to type 'X'.
    Types of property 'f' are incompatible.
      Type '() => 真假' is not assignable to type '() => 文字'.
        Type '真假' is not assignable to type '文字'.


==== tests/cases/compiler/generics4.ts (1 errors) ====
    class C<T> { private x: T; }
    interface X { f(): string; }
    interface Y { f(): boolean; }
    var a: C<X>;
    var b: C<Y>;
    
    a = b; // Not ok - return types of "f" are different
    ~
!!! error TS2322: Type 'C<Y>' is not assignable to type 'C<X>'.
!!! error TS2322:   Type 'Y' is not assignable to type 'X'.
!!! error TS2322:     Types of property 'f' are incompatible.
!!! error TS2322:       Type '() => 真假' is not assignable to type '() => 文字'.
!!! error TS2322:         Type '真假' is not assignable to type '文字'.